	- Fix possible buffer overflow for arap - noted by Oren Nechushtan

F4.0.4.17
	- Move REARMSIGNAL definition to autoconf
	- Move REAPCHILD definition to autoconf and check if SIG_IGN works
	- Move SIGCHLD handling to apply to all daemon personalities - partly
	  from John Payne

F4.0.4.18
	- Fix missing printf argument in debug output
	- Add "enable = nopassword" to users, groups and hosts.

F4.0.4.19
	- offer $ip to before/after authorization scripts
	- wtmp and accounting files do not need to be mutually exclusive
	- add authorization script example - from Daniel Schmidt
	- add partial support for single-connection mode
	- convert select()s to poll()s

F4.0.4.20
	- remove stupid error message about running as root
	- Drop the private regex library in favor of libc's.  A system w/o a
	  regex is one I dont care about.
	- finally remove config parsing for 'default authorization = permit'
	- apply ACLs to pap, chap, arap and ms-chap authentication too
	- change accounting log time format to match syslog
	- do_auth.py fix from Daniel Schmidt
	- import fdes from David G. Koontz (1991) for ARAP/MSCHAP_DES
	- move MSCHAP define to autoconf; --enable-mschap
	- use the fdes code for ARAP_DES and MSCHAP_DES.  NOTE: I have no way to
	  test this.  lmk if it does not work.
	- increase NAC address array size.  affects the format of the tacacs
	  wholog file (TACPLUS_WHOLOGFILE); existing file should be removed.
	- add comments to tac_plus.conf.5 about cipher algorithms in
	  password_spec
	- do_auth.py - Fixed reression, Support for replacing av pairs - from
	  Daniel Schmidt

F4.0.4.21
	- do_auth.py - better Nexus support, better AV replacement, and only
	  send roles to Nexus - from Daniel Schmidt
	- fix bug in checking the return value of regexec() for login and enable
	  ACLs.
	- do_auth.py - better Nexus support, better AV replacement, and only

F4.0.4.22
	- check of regexec() return value inverted - from Ignas Kazlauskas

F4.0.4.23
	- fix build on netbsd