@@ -426,3 +426,15 @@ F4.0.4.22
 
 F4.0.4.23
 	- fix build on netbsd
+	- update PAM includes for OSX - YiJia Zhang
+
+F4.0.4.24
+	- allow PAM for pap authentication - Jeroen Nijhof
+	- replace home-grown vprintf in report() with vsnprintf - Robert Swiecki
+	- dont use report in signal handler, since report uses syslog which uses
+	  malloc - Robert Swiecki
+	- use volatile sig_atomic_t 'reinitialize' variable - Robert Swiecki
+	- use snprintf in get_authen_continue() and send_authen_error() and
+	  check return - Robert Swiecki
+	- make snprintf buffers of get_authen_continue() and send_authen_error()
+	  at least NI_MAXHOST bytes - Robert Swiecki
